dialog with form returning values

--- a/src/app/components/mainapp/admin/admin-delete-user.html
+++ b/src/app/components/mainapp/admin/admin-delete-user.html
@@ -5,7 +5,7 @@
       
       <div mat-dialog-actions>
         <button mat-raised-button	 (click)="onNoClick()">Cancel</button>
-        <button mat-raised-button	 [mat-dialog-close]="selected" cdkFocusInitial>Confirm Delete</button>
+        <button class="mat-raised-button mat-primary" 	 [mat-dialog-close]="selected" cdkFocusInitial>Confirm Delete</button>
       </div>
     
       </div>
