--- a/src/app/components/mainapp/admin/admin-edit-users.html
+++ b/src/app/components/mainapp/admin/admin-edit-users.html
@@ -12,6 +12,6 @@
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button	 (click)="onNoClick()">Cancel</button>
-  <button mat-raised-button	 [mat-dialog-close]="selected" cdkFocusInitial>Save</button>
+  <button class="mat-raised-button mat-primary"  [mat-dialog-close]="selected" cdkFocusInitial>Save</button>
 </div>
 
