--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -211,7 +211,7 @@
        <div>
           <button class="md-raised-button md-primary" (click)="selectRowToEdit()" >Edit / View</button>    <span style="width: 10px"></span>
           <button md-raised-button (click)="selectRow()" >Print</button>    <span style="width: 10px"></span>
-          <button md-raised-button (click)="selectRow()" >Void</button>    <span style="width: 10px"></span>
+          <button md-raised-button (click)="selectRowToVoid()" >Void</button>    <span style="width: 10px"></span>
           <button md-raised-button (click)="selectRow()" >Post</button>    <span style="width: 10px"></span>
           <button md-raised-button (click)="selectRow()" >Un-Post</button>    <span style="width: 10px"></span>
                 
