--- a/src/app/components/mainapp/editreceipt/editreceipt.component.css
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.css
@@ -5,6 +5,12 @@
     padding: 10px;
   
 }
+.column-narrow {
+  float: left;
+  width: 40%;
+  padding: 2px;
+
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -17,7 +23,7 @@
 .example-container {
     display: flex;
     flex-direction: column;
-    max-height: 500px;
+    max-height: 600px;
     min-width: 300px;
     position: relative;
   }
