--- a/src/app/components/mainapp/main/main.component.html
+++ b/src/app/components/mainapp/main/main.component.html
@@ -9,16 +9,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="#">>BT<</a>
+        <a class="navbar-brand" href="#">[BT]</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a  [routerLink]="['/mainapp/receipts']">Home</a></li>
+          <li class="active"><a  [routerLink]="['/mainapp/news']">News & Messages</a></li>
          
         </ul>
         <ul class="nav navbar-nav navbar-right">
          
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Logged in: {{username}}</a></li>
+          <li><a  [routerLink]="['/mainapp/passwd']"><span class="glyphicon glyphicon-user"></span> Logged in: {{username}}</a></li>
           <li><a href="logout" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
       </div>
