--- a/src/app/components/mainapp/menu/menu.component.html
+++ b/src/app/components/mainapp/menu/menu.component.html
@@ -1,16 +1,19 @@
   <div class="col-sm-2 sidenav">
-    <div *ngIf = "access == 3">
+    <div *ngIf = "access == 0">
       <p>  <a  [routerLink]="['/mainapp/receipts']">New Receipts </a> </p>
-      <p>  <a  [routerLink]="['/mainapp/editreceipts']">Search & Edit</a> </p>
-    </div>
-    <div *ngIf = "access == 2">
       <p> <a  [routerLink]="['/mainapp/editreceipts']">Search & Edit </a></p>
-      <p><a  [routerLink]="['/mainapp/editreceipts']">Search & Edit </a></p>
+    </div>
+    <div *ngIf = "access == 1 || access == 2">
+      <p>  <a  [routerLink]="['/mainapp/receipts']">New Receipts </a> </p>
+      <p> <a  [routerLink]="['/mainapp/editreceipts']">Search & Edit </a></p>
+      <p><a  [routerLink]="['/mainapp/newdeposits']">New Deposits </a></p>
+      <p><a  [routerLink]="['/mainapp/editdeposits']">Search & Edit </a></p>
     </div>
     <div *ngIf = "access == 3">
       <p><a  [routerLink]="['/mainapp/admin']">Admin </a></p>
+      <p><a  [routerLink]="['/mainapp/bank']">Bank </a></p>
     </div>
-    
+    <p> <a  [routerLink]="['/mainapp/passwd']">Reset Password </a></p>
 
   </div>
   
