--- a/src/app/components/mainapp/newdeposits/newdeposits.component.html
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.html
@@ -3,24 +3,131 @@
   <div class="row content">
     
   <app-menu></app-menu>
-   <div class="col-sm-8 text-left"> 
-      <h1>New Deposits</h1>
-           
+   <div class="col-sm-10 text-left"> 
+        <div class="example-container mat-elevation-z8">
+          <mat-table #table [dataSource]="dataSource" class="example-table"
+                     matSort matSortActive="created" matSortDisableClear matSortDirection="asc">
+        
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+        
+             <!-- Checkbox Column -->
+            <ng-container matColumnDef="select">
+              <mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                              [checked]="selection.hasValue() && isAllSelected()"
+                              [indeterminate]="selection.hasValue() && !isAllSelected()">
+                </mat-checkbox>
+              </mat-header-cell>
+              <mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()"
+                              (change)="$event ? selection.toggle(row) : null; cl(row)"
+                              [checked]="selection.isSelected(row)">
+                </mat-checkbox>
+              </mat-cell>
+            </ng-container>
+            <!-- id Column -->
+            <ng-container matColumnDef="id">
+              <mat-header-cell *matHeaderCellDef class="example-header">Id</mat-header-cell>
+              <mat-cell *matCellDef="let row">{{ row.id }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="agent">
+                <mat-header-cell *matHeaderCellDef class="example-header">Agent</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.agent }}</mat-cell>
+            </ng-container>
+        
+            <ng-container matColumnDef="date">
+                <mat-header-cell *matHeaderCellDef class="example-header">Date</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.date }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="fortrip">
+                <mat-header-cell *matHeaderCellDef class="example-header">for</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.fortrip }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="remark">
+                <mat-header-cell *matHeaderCellDef class="example-header">Remark</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.remark }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="status">
+                <mat-header-cell *matHeaderCellDef class="example-header">Status</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.status }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="usd">
+                <mat-header-cell *matHeaderCellDef class="example-header">USD</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.usd }}</mat-cell>
+              </ng-container>
+
+            <!-- Office Column -->
+            <ng-container matColumnDef="office">
+              <mat-header-cell *matHeaderCellDef class="example-header">Office</mat-header-cell>
+              <mat-cell *matCellDef="let row">{{ row.office  }}</mat-cell>
+            </ng-container>
+        
+            <!-- Amount Column -->
+            <ng-container matColumnDef="amount">
+              <mat-header-cell *matHeaderCellDef class="example-header">Amount</mat-header-cell>
+              <mat-cell *matCellDef="let row">{{ row.amount }}</mat-cell>
+            </ng-container>
+        
+            <!-- Invoice Column -->
+            <ng-container matColumnDef="invoice">
+              <mat-header-cell *matHeaderCellDef class="example-header">Invoice</mat-header-cell>
+              <mat-cell *matCellDef="let row">{{ row.invoice }}</mat-cell>
+            </ng-container>
+        
+            <!-- Paytype Column -->
+            <ng-container matColumnDef="paytype">
+              <mat-header-cell *matHeaderCellDef class="example-header">Paytype</mat-header-cell>
+              <mat-cell *matCellDef="let row">{{ row.paytype }}</mat-cell>
+            </ng-container>
+        
+            <!-- Rcvd Column -->
+            <ng-container matColumnDef="rcvdfrom">
+              <mat-header-cell *matHeaderCellDef class="example-header">Rcvd</mat-header-cell>
+              <mat-cell *matCellDef="let row">{{ row.rcvdfrom }}</mat-cell>
+            </ng-container>
+        
+            
+            
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;  let i = index;"  
+      [ngClass]="{'highlight': selectedRowIndex == row.id}"
+      (click)="highlight(row,i)"> </mat-row>
+      
+            
+            
+          </mat-table>
+        
+          <mat-paginator [length]="resultsLength" [pageSize]="10">
+          </mat-paginator>
+          
+        </div>
+       <div>
+          <button class="md-raised-button md-primary" (click)="selectRowToEdit()" >Edit / View</button>    <span style="width: 10px"></span>
+                
+       </div>
+    
+        
           
     </div>
           
           
-
+    
 
 
     
-    <div class="col-sm-2 sidenav">
+    <!--div class="col-sm-2 sidenav">
       <div class="well">
         <p>Recent Activity</p>
       </div>
       <div class="well">
         <p>Today's Summary{{lastReceiptData}}</p>
       </div>
-    </div>
+    </div-->
   </div>
 </div>
