--- a/src/app/components/mainapp/newdeposits/newdeposits.component.html
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.html
@@ -110,55 +110,55 @@
         <div class="col-xs-10 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
           <div class="row">
             <div class="column">
-                  <form class="form-signin" (ngSubmit)="onSignup(f)" #f="ngForm">
+               
                       <div class="row">
                         <div class="column">
 
-                          <div class="form-group">
-                              <mat-form-field>
+                          
+                             
                                   <label for="office">Bane </label>
-                                <mat-select  [(ngModel)]="selectedValue" class="form-control" name="selectedValue" required>
+                                <mat-select  [(ngModel)]="selectedValue"  name="selectedValue" required>
                                   <mat-option *ngFor="let bank of banks" [value]="bank.value">
                                     {{ bank.viewValue }}
                                   </mat-option>
                                 </mat-select>
-                              </mat-form-field>
-                        </div>
+                             
+                        
                     </div>
                       </div>
                     <div class="row">
                         <div class="column">
-                            <mat-form-field>  <input matInput type="number"  placeholder="Total Cheque" formControlName="cheque">  </mat-form-field>
+                             <input matInput type="number"  placeholder="Total Cheque" > 
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
-                            <mat-form-field>  <input matInput type="number" placeholder="Total Cash" (keydown)="showCashBox()" formControlName="cash">  </mat-form-field>
+                             <input matInput type="number" placeholder="Total Cash" (keydown)="showCashBox()" > 
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
-                            <mat-form-field>  <input matInput type="number" placeholder="Total Debit" formControlName="debit">  </mat-form-field>
+                             <input matInput type="number" placeholder="Total Debit" > 
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
-                            <mat-form-field>  <input matInput type="number" placeholder="Total Credit" formControlName="credit">  </mat-form-field>
+                             <input matInput type="number" placeholder="Total Credit" > 
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
-                            <mat-form-field>  <input matInput type="number" placeholder="Total Direct" formControlName="direct">  </mat-form-field>
+                             <input matInput type="number" placeholder="Total Direct" > 
                         </div>
                     </div>
                     <div class="row">
                         <div class="column">
-                            <mat-form-field>  <input matInput type="number" placeholder="Total Deposit" formControlName="total">  </mat-form-field>
+                             <input matInput type="number" placeholder="Total Deposit" > 
                         </div>
                     </div>
                       
                       
-                  </form>
+                
             </div>
                 <div>
                     <button class="md-raised-button md-primary" (click)="selectRowToEdit()" > Deposit</button>    <span style="width: 10px"></span>
